--- a/coverPage.css
+++ b/coverPage.css
@@ -1,19 +1,18 @@
 
 img {
-    width: 100%;
-    height: 100%;
- margin:  auto;
+    width: 200px;
+    height: 225px;
+ 
 }
 
 .coverPagePicDiv{
-padding: 10px;
-margin: 20px auto;
-width: 30%;
-    height: 30%
-opacity: 0.8;
-box-shadow: 1px 1px 5px rgba(0,0,0,0.5);
- background: rgba(0,0,0,.1);
-//background:#D2B48C;
+    padding: 10px;
+    margin: 80px 30px;
+    width: 200px;
+    height: 225px;
+    opacity: 0.8;
+    box-shadow: 1px 1px 5px rgba(0,0,0,0.5);
+    background:#D2B48C;
 }
 
 
