--- a/coverPage.css
+++ b/coverPage.css
@@ -12,7 +12,7 @@ img {
     height: 225px;
     opacity: 0.8;
     box-shadow: 1px 1px 5px rgba(0,0,0,0.5);
-    background:#D2B48C;
+    background: rgba(0,0,0,0.1);
 }
 
 
